--- a/build.gradle
+++ b/build.gradle
@@ -43,16 +43,15 @@ allprojects {
 }
 
 project(":desktop") {
-    apply plugin: "application"
+    apply plugin: "java-library"
 
-    mainClassName = 'com.mygdx.game.DesktopLauncher'
-    applicationDefaultJvmArgs = ['-XstartOnFirstThread']
 
     dependencies {
         implementation project(":core")
-        implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        
     }
 }
 
@@ -63,41 +62,41 @@ project(":ios") {
 
     dependencies {
         implementation project(":core")
-        implementation "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
-        implementation "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
-        implementation "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
-        implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
+        api "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
+        api "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
+        api "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+        api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
         
     }
 }
 
-//project(":html") {
-//    apply plugin: "java-library"
-//    apply plugin: "gwt"
-//    apply plugin: "war"
-//    apply plugin: "org.gretty"
-//
-//
-//    dependencies {
-//        implementation project(":core")
-//        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
-//        api "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
-//        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
-//        api "com.google.jsinterop:jsinterop-annotations:2.0.2:sources"
-//        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
-//        api "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
-//
-//    }
-//}
+project(":html") {
+    apply plugin: "java-library"
+    apply plugin: "gwt"
+    apply plugin: "war"
+    apply plugin: "org.gretty"
+
+
+    dependencies {
+        implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
+        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
+        api "com.google.jsinterop:jsinterop-annotations:2.0.2:sources"
+        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
+        api "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+        
+    }
+}
 
 project(":core") {
     apply plugin: "java-library"
 
 
     dependencies {
-        implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         
     }
 }
