--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,5 +26,6 @@ test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+        showStandardStreams = true
     }
 }
